# toy_payment_engine

./: .gitignore  Cargo.toml
res/: tx_not_disputable.csv  tx_not_withdrawable.csv  tx_success_chargeback.csv  tx_success_resolve.csv
src/: lib.rs  main.rs
src/engine/: error.rs  mod.rs  model.rs  processor.rs
