[package]
name = "toy_payment_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.0"
rust_decimal = "1.32.0"
serde = { version = "1.0.188", features = ["derive"] }
csv-async = { version = "1.2.6", features = ["tokio"] }
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread", "fs", "io-util", "io-std"] }
tokio-stream = "0.1.14"